--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -5,7 +5,7 @@ menu:
   Categories: categories  # 分类
   Tags: tags  # 标签
   Repository: githubrepository  # github repositories
-  Books: books  # 豆瓣书单
+# Books: books  # 豆瓣书单
   Links: links  # 友链
   About: about  # 关于
 
@@ -17,7 +17,7 @@ menu_icons:
   categories: icon-folder
   tags: icon-tags
   repository: icon-project
-  books: icon-book-fill
+# books: icon-book-fill
   links: icon-friendship
   about: icon-cup-fill
 
@@ -33,15 +33,15 @@ site:
     url: ../images/logo.png
   title: Hexo # 页面title
   favicon: /favicon.png
-  board: <p>欢迎交流与分享经验!！！！</p> # 站点公告
-  copyright: true # 底部版权信息
+  board: <p>欢迎交流与分享经验!</p> # 站点公告
+  copyright: false # 底部版权信息
 
 # config
 config:
   skin: theme-black # 主题颜色 theme-black theme-blue theme-green theme-purple
   layout: main-center # 布局方式 main-left main-center main-right
   toc: true # 是否开启文章章节目录导航
-  menu_highlight: true # 是否开启当前菜单高亮显示
+  menu_highlight: false # 是否开启当前菜单高亮显示
   thumbnail: false # enable posts thumbnail, options: true, false
   excerpt_link: Read More
 
@@ -56,7 +56,7 @@ pagination:
 # Sidebar
 sidebar: right
 widgets:
-  - board  
+#  - board  
   - category
   - tag
   - tagcloud
@@ -84,11 +84,11 @@ donate:
   enable: true
   weipay:
     image: images/donate/weipay.jpg
-    qrcode: images/donate/weipayimg1.png
+    qrcode: images/donate/weipayimg.png
     title: 微信支付
   alipay: 
     image: images/donate/alipay.jpg
-    qrcode: images/donate/alipayimg1.png 
+    qrcode: images/donate/alipayimg.png 
     title: 支付宝
 
 # Share
@@ -130,10 +130,10 @@ comment:
   # https://api.douban.com/v2/movie/coming_soon 即将上映的电影
   # https://api.douban.com/v2/movie/subject/:id 单个电影信息
   # https://api.douban.com/v2/movie/search?q={text} 电影搜索
-douban:
-  user: # 豆瓣用户名
-  start: 0 # 从哪一条记录开始
-  count: 100 # 获取豆瓣书单数据条数
+# douban:
+  # user: # 豆瓣用户名
+  # start: 0 # 从哪一条记录开始
+  # count: 100 # 获取豆瓣书单数据条数
   
 # PV
 pv:
@@ -143,7 +143,7 @@ pv:
     enable: false  # leancloud统计
     app_id: # leancloud <AppID>
     app_key: # leancloud <AppKey>
-        
+
 # wordcount
 postCount:
   enable: true
@@ -171,48 +171,46 @@ profile:
   author: 猴子程序员
   author_title: Java Developer
   author_description: 个人简介。
-  location: HangZhou, China
+  location: HangZhou, ZheJiang, China
   follow: https://github.com/yourzjf
   # Social Links
   social:
     links:
       github: https://github.com/yourzjf
-      weibo: http://weibo.com/cofess
-      twitter: https://twitter.com/iwebued
+      # weibo: http://weibo.com/cofess
+      # twitter: https://twitter.com/iwebued
       # facebook: /
       # dribbble: /
-      behance: https://www.behance.net/cofess
+      # behance: https://www.behance.net/cofess
       # rss: atom.xml
     link_tooltip: true # enable the social link tooltip, options: true, false
   # My Skills 
   skills:
     Git: ★★★☆☆
-    Gulp: ★★★☆☆
+    Java: ★★★★☆
     Javascript: ★★★☆☆
-    HTML+CSS: ★★★☆☆
-    Bootstrap: ★★★☆☆
-    ThinkPHP: ★★★☆☆
-    平面设计: ★★★☆☆
+    MYSQL/ORACLE: ★★★☆☆
+    SpringMVC: ★★★★☆
+    SpringCloud: ★★☆☆☆
+    Middleware: ★★★☆☆
+    Linux: ★★☆☆☆
   # My Personal Links
   links:
     Github: https://github.com/yourzjf
-    Blog: http://blog.cofess.com
-    微博: http://weibo.com/cofess
-    花瓣: http://huaban.com/cofess
-    Behance: https://www.behance.net/cofess
+    # Blog: http://blog.cofess.com
+    # 微博: http://weibo.com/cofess
+    # 花瓣: http://huaban.com/cofess
+    # Behance: https://www.behance.net/cofess
   # My Personal Labels
   labels:
-    - 前端
-    - 前端开发
-    - 前端重构
-    - Web前端
-    - 网页重构
+    - Java
+    - 后端开发
+    - 后端重构
   # My Personal Works
   works:
     name:
-      link: http://www.example.com
-      date: 2016
+      link: http://www.hztianque.com
+      date: 2018
   # My Personal Projects
   projects:
-    cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
-    cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
+    yourzjf/spring-cloud-demo: https://github.com/yourzjf/spring-cloud-demo
