--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -34,7 +34,7 @@ site:
   title: Jeffrey's Blog # 页面title
   favicon: /favicon.png
   board: <p>欢迎交流与分享经验!</p> # 站点公告
-  copyright: false # 底部版权信息
+  copyright: true # 底部版权信息
 
 # config
 config:
@@ -67,7 +67,7 @@ widgets:
 index_widgets:
 # - category
 # - tagcloud
-# - archive  
+# - archive
 
 # widget behavior
 archive_type: 'monthly'
@@ -82,13 +82,13 @@ search:
 # Donate
 donate:
   enable: true
-  weipay:
-    image: images/donate/weipay.jpg
-    qrcode: images/donate/weipayimg.png
-    title: 微信支付
+#  weipay:
+#    image: images/donate/weipay.jpg
+#    qrcode: images/donate/weipayimg.png
+#    title: 微信支付
   alipay: 
-    image: images/donate/alipay.jpg
-    qrcode: images/donate/alipayimg.png 
+    image: images/donate/alipay1.jpg
+    qrcode: images/donate/alipayimg1.png 
     title: 支付宝
 
 # Share
@@ -172,7 +172,7 @@ profile:
   author_title: Java Developer
   author_description: 人生自有诗意，心底涓流不息。
   location: HangZhou, ZheJiang, China
-  follow: https://github.com/yourzjf
+  follow: https://www.yourzjf.com
   # Social Links
   social:
     links:
@@ -208,7 +208,7 @@ profile:
     - 后端重构
   # My Personal Works
   works:
-    name:
+    公司:
       link: http://www.hztianque.com
       date: 2018
   # My Personal Projects
