--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -208,7 +208,7 @@ profile:
     - 后端重构
   # My Personal Works
   works:
-    公司:
+    company:
       link: http://www.hztianque.com
       date: 2018
   # My Personal Projects
